--- a/Assignment04.ipynb
+++ b/Assignment04.ipynb
@@ -5,6 +5,11 @@
    "metadata": {},
    "source": [
     "# Assignment 04\n",
+    "\n",
+    "<div align=\"right\">\n",
+    "20232660 최지안\n",
+    "</div>\n",
+    "\n",
     "## 1. LeetCode 225"
    ]
   },
@@ -76,7 +81,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class ListQueue:\n",
+    "    def __init__(self):\n",
+    "        self.__queue = []\n",
+    "    \n",
+    "    def enqueue(self, x):\n",
+    "        self.__queue.insert(0, x)\n",
+    "    \n",
+    "    def dequeue(self):\n",
+    "        return self.__queue.pop(len(self.__queue)-1)\n",
+    "    \n",
+    "    def front(self):\n",
+    "        return self.__queue[len(self.__queue)-1]\n",
+    "    \n",
+    "    def isEmpty(self) -> bool:\n",
+    "        return len(self.__queue) == 0\n",
+    "    \n",
+    "    def dequeueAll(self) :\n",
+    "        self.__queue.clear()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -219,7 +243,13 @@
    "source": [
     "### Problem 06\n",
     "\n",
-    "enqueue()의 수행시간 = Θ(1) / dequeue()의 수행시간 = Θ(n)\n"
+    "enqueue()의 수행시간 = Θ(1) / dequeue()의 수행시간 = O(n)\n",
+    "\n",
+    "코드 7-13은 linkedQueue로 circularLinkedList를 기반으로 한다.\n",
+    "sircularLinkedList는 dummy head와 tail을 가지고 있다.\n",
+    "enqueue로 맨 앞에 삽입하는 건 더미헤드 노드로 insert() 삽입이 가능하므로 Θ(1)이고 맨 뒤에 삽입 하는 것 또한 append()로 삽입이 가능하여 Θ(1)이다.\n",
+    "dequeue로 맨 앞을 삭제하는 건 pop()으로 삽입이 가능하여 Θ(1)이고 맨 뒤에 삽입하는 건 n개 중에 tail의 앞 노드를 찾아서 삭제해야하기 때문에 O(n)의 수행시간을 가진다.\n",
+    "그러므로 enqueue는 Θ(1) / dequeue는 최악의 경우 O(n)의 수행시간을 가진다는 것을 알 수 있다."
    ]
   },
   {
@@ -228,7 +258,12 @@
    "source": [
     "### Problem 07\n",
     "\n",
-    "enqueue()의 수행시간 = Θ(n) / dequeue()의 수행시간 = Θ(n)"
+    "enqueue()의 수행시간 = O(n) / dequeue()의 수행시간 = O(n)\n",
+    "\n",
+    "위의 circularLinkedList와 달리 LinkedListBasic은 dummy head는 있지만 tail은 없다.\n",
+    "enqueue로 맨 앞에 삽입하는 건 더미헤드를 통해 insert()로 삽입이 가능하므로 Θ(1)이지만 맨 뒤에 삽입하는 건 tail이 없으므로 처음부터 n개 거쳐서 마지막 노드를 찾아야하므로 O(n)의 수행시간을 가진다.\n",
+    "dequeue로 맨 앞을 삭제하는 건 더미헤드로 첫 헤드를 pop()하면 되므로 Θ(1) 이지만 맨 뒤를 삭제하는 건 처음부터 n까지 가서 마지막 노드를 삭제해야하므로 O(n)의 수행시간을 가진다.\n",
+    "그러므로 enqueue는 최악의 경우 O(n) / dequeue도 최악의 경우 O(n)의 수행시간을 가진다는 것을 알 수 있다."
    ]
   },
   {
@@ -243,7 +278,41 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Deque:\n",
+    "    def __init__(self):\n",
+    "        self.__queue = []\n",
+    "    \n",
+    "    def enqueueFront(self, x):\n",
+    "        self.__queue.insert(0, x)\n",
+    "    \n",
+    "    def enqueueRear(self, x):\n",
+    "        self.__queue.append(x)\n",
+    "    \n",
+    "    def dequeueFront(self):\n",
+    "        return self.__queue.pop(0)\n",
+    "    \n",
+    "    def dequeueRear(self):\n",
+    "        return self.__queue.pop(len(self.__queue)-1)\n",
+    "    \n",
+    "    def front(self):\n",
+    "        if self.isEmpty():\n",
+    "            return None\n",
+    "        else:\n",
+    "            return self.__queue[0]\n",
+    "    \n",
+    "    def isEmpty(self) -> bool:\n",
+    "        return (len(self.__queue) == 0)\n",
+    "    \n",
+    "    def dequeueAll (self):\n",
+    "        self.__queue.clear()\n",
+    "    \n",
+    "    def printQueue(self):\n",
+    "        print(\"Queue from front:\", end = ' ')\n",
+    "        for i in range(len(self.__queue)):\n",
+    "            print(self.__queue[i], end = ' ')\n",
+    "        print()"
+   ]
   }
  ],
  "metadata": {
