--- a/Assignment04.ipynb
+++ b/Assignment04.ipynb
@@ -5,10 +5,7 @@
    "metadata": {},
    "source": [
     "# Assignment 04\n",
-    "\n",
-    "<div align=\"right\">\n",
-    "20232660 최지안\n",
-    "</div>\n",
+    "<div align=\"right\">20232660 최지안</div>\n",
     "\n",
     "## 1. LeetCode 225"
    ]
