--- a/Assignment04.ipynb
+++ b/Assignment04.ipynb
@@ -103,6 +103,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "front와 tail의 위치가 바꾸었을 때 수정이 필요한 부분은 enqueue, dequeue, front이다.\n",
+    "enqueue에서 기존에 append는 tail에 추가되는 형식이었지만 front와 tail이 바뀌었으므로 insert로 첫번째에 추가해야한다.\n",
+    "dequeue에서 기존에 pop은 front 첫번째가 삭제되는 형식이지만 바뀌었으므로 len(self.__queue)-1 을 통해 맨 뒤에 있는 노드를 삭제하도록 한다.\n",
+    "front는 기존에 front 첫번째를 알려주는 형식이지만 바뀌었으므로 len(self.__queue)-1을 통해 맨 뒤에 있는 노드를 알려주도록 한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Problem 02"
    ]
   },
@@ -156,7 +166,7 @@
    "source": [
     "from base.queue.linkedQueue import LinkedQueue\n",
     "\n",
-    "def CopyQueue(a : LinkedQueue ,b : LinkedQueue):\n",
+    "def CopyQueue(a : LinkedQueue, b : LinkedQueue):\n",
     "    temp = LinkedQueue()\n",
     "\n",
     "    while not a.isEmpty():\n",
@@ -166,6 +176,15 @@
     "\n",
     "    while not temp.isEmpty():\n",
     "        a.enqueue(temp.dequeue()) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a에 있는 요소를 b로 복사하는데 바로 복사하면 a에 있는 요소가 사라지기 때문에 temp라는 비어있는 큐 하나를 만들고\n",
+    "a안에 요소가 다 사라질 때까지 dequeue한 요소를 변수에 넣고 바로 b와 temp 큐에 그대로 넣는다.\n",
+    "그리고 그 temp에 있는 요소들을 temp가 다 빌 때 까지 a에 다시 그대로 넣어서 문제에서 원하는 결과를 도출한다."
    ]
   },
   {
@@ -204,6 +223,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "우선 큐 2개를 만들고 push에서는 큐2에 x를 push하고 다른 큐1에 있는 요소를 큐2에 그대로 복사하고 큐1과 큐2를 바꿈으로서 큐1을 스택처럼 보여지도록 한다.\n",
+    "pop에서는 그 큐1에서 최근 들어간 요소를 가장 위에 올라오도록 설정했으니 그대로 dequeue해서 삭제한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Problem 05"
    ]
   },
@@ -232,6 +259,15 @@
     "            return None\n",
     "        \n",
     "        return self.s2.pop()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "우선 스택 2개를 만들고 enqueue에서는 그대로 x를 스택1에 push 한다.\n",
+    "dequeue에서는 스택1에 들어있는 요소를 위에서부터 pop해서 스택2에 순서대로 push 한다.\n",
+    "그러고 스택1에 있는 요소가 전부 스택2로 옮겨지고 난 뒤라면 그대로 스택2에서 pop을 한다."
    ]
   },
   {
